--- a/ShippingSystem.API/appsettings.json
+++ b/ShippingSystem.API/appsettings.json
@@ -11,7 +11,7 @@
   "ConnectionStrings": {
 
 
-    "cs": "Data Source=LAPTOP-JMGMI5SB\\DEV;Initial Catalog=ShippingSystem;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+    "cs": "Data Source=.;Initial Catalog=ShippingSystem;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
   },
   "Jwt": {
     "Key": "THISisA_SUPER_LONG_SECRET_KEY_123456789!",
