--- a/ShippingSystem.API/appsettings.json
+++ b/ShippingSystem.API/appsettings.json
@@ -8,11 +8,11 @@
   "AllowedHosts": "*",
 
 
-  "ConnectionStrings": {
+    "ConnectionStrings": {
 
 
-    "cs": "Data Source=LAPTOP-JMGMI5SB\\DEV;Initial Catalog=ShippingSystem;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
-  },
+        "cs": "Data Source=HADEER_EZZELDIN;Initial Catalog=ShippingSystem;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+    },
   "Jwt": {
     "Key": "THISisA_SUPER_LONG_SECRET_KEY_123456789!",
     "Issuer": "ShippingSystemAPI",
