add govId and cityId to class Vendor  and add function add vendor endpoint

--- a/ShippingSystem.API/appsettings.json
+++ b/ShippingSystem.API/appsettings.json
@@ -11,7 +11,7 @@
     "ConnectionStrings": {
 
 
-        "cs": "Data Source=HADEER_EZZELDIN;Initial Catalog=ShippingSystem;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+        "cs": "Data Source=HADEER_EZZELDIN;Initial Catalog=ShippingSystemV1;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
     },
   "Jwt": {
     "Key": "THISisA_SUPER_LONG_SECRET_KEY_123456789!",
