adding endpoint to make delivery update status

--- a/ShippingSystem.API/appsettings.json
+++ b/ShippingSystem.API/appsettings.json
@@ -12,7 +12,7 @@
 
 
 
-    "cs": "Data Source=LAPTOP-JMGMI5SB\\DEV;Initial Catalog=ShippingSystemDev;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+    "cs": "Data Source=.;Initial Catalog=ShippingSystemDev;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
 
 
 
