add   function TrackOrder based on role

--- a/ShippingSystem.API/appsettings.json
+++ b/ShippingSystem.API/appsettings.json
@@ -12,7 +12,7 @@
 
 
 
-    "cs": "Data Source=LAPTOP-JMGMI5SB\\DEV;Initial Catalog=ShippingSystemDev;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+        "cs": "Data Source=HADEER_EZZELDIN;Initial Catalog=ShippingSystemV1;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
 
 
 
@@ -21,7 +21,7 @@
     "Key": "THISisA_SUPER_LONG_SECRET_KEY_123456789!",
     "Issuer": "ShippingSystemAPI",
     "Audience": "ShippingSystemClient",
-    "DurationInMinutes": 60
+    "DurationInMinutes": 1440
   }
 
 }
