--- a/ShippingSystem.API/appsettings.json
+++ b/ShippingSystem.API/appsettings.json
@@ -11,7 +11,7 @@
     "ConnectionStrings": {
 
 
- "cs": "Data Source= DESKTOP-84EL4O2\\SQLEXPRESS;Initial Catalog=ShippingSystemV1;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+ "cs": "Data Source= .;Initial Catalog=ShippingSystemV1;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
 
 
 
