--- a/ShippingSystem.API/appsettings.json
+++ b/ShippingSystem.API/appsettings.json
@@ -8,18 +8,18 @@
   "AllowedHosts": "*",
 
 
-    "ConnectionStrings": {
+  "ConnectionStrings": {
 
-        "cs": "Data Source=HADEER_EZZELDIN;Initial Catalog=ShippingSystemV1;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
-
-
+    "cs": "Data Source=.;Initial Catalog=ShippingSystemV1;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
 
 
 
 
 
 
-    },
+
+
+  },
   "Jwt": {
     "Key": "THISisA_SUPER_LONG_SECRET_KEY_123456789!",
     "Issuer": "ShippingSystemAPI",
