fixing weight setting and delete shipping type

--- a/ShippingSystem.API/appsettings.json
+++ b/ShippingSystem.API/appsettings.json
@@ -8,18 +8,18 @@
   "AllowedHosts": "*",
 
 
-  "ConnectionStrings": {
+    "ConnectionStrings": {
 
-        "cs": "Data Source=.;Initial Catalog=ShippingSystemV1;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
-
-
+        "cs": "Data Source=DESKTOP-84EL4O2\\SQLEXPRESS;Initial Catalog=ShippingSystemV2;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
 
 
 
 
 
 
-  },
+
+
+    },
   "Jwt": {
     "Key": "THISisA_SUPER_LONG_SECRET_KEY_123456789!",
     "Issuer": "ShippingSystemAPI",
